--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ logging.level.org.hibernate.SQL=DEBUG
 ##
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+
+##
+# QUEUE
+##
+spring.cloud.stream.poller.fixed-delay=3000
+spring.cloud.stream.function.bindings.saveExpenditure-out-0=cartExpenditureQueue
